tests/parse_print/random_perturb/set01/delete-09/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/delete-09/delete-09.essence line 1, column 10:
language name has to be Essence, but given: Essnce
    line 1, column 10
    language Essnce 1.3
          ^^^^^^^